--- a/requirements.txt
+++ b/requirements.txt
@@ -69,7 +69,7 @@ numexpr==2.8.3
 numpy==1.20.3
 oauthlib==3.2.2
 packaging==21.3
-pandas==1.5.1
+pandas
 pandas-profiling==3.4.0
 parso==0.8.3
 patsy==0.5.3
