--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ cachetools==5.2.0
 catalogue==1.0.2
 certifi==2022.9.24
 charset-normalizer==2.1.1
-click==8.1.3
+click
 cloudpickle==2.2.0
 colorama==0.4.6
 colorlover==0.3.0
