--- a/requirements1.txt
+++ b/requirements1.txt
@@ -10,7 +10,7 @@ cachetools==5.2.0
 catalogue==1.0.2
 certifi==2022.9.24
 charset-normalizer==2.1.1
-click
+click==8.1.3
 cloudpickle==2.2.0
 colorama==0.4.6
 colorlover==0.3.0
@@ -69,7 +69,7 @@ numexpr==2.8.3
 numpy==1.20.3
 oauthlib==3.2.2
 packaging==21.3
-pandas
+pandas==1.5.1
 pandas-profiling==3.4.0
 parso==0.8.3
 patsy==0.5.3
